--- a/index.html
+++ b/index.html
@@ -42,16 +42,19 @@
     <th>Promotion</th>
     <th>Period</th>
     <th>Link</th>
+    <th>Amazon Deal Site</th>
   </tr>
   <tr>
     <td>3 Artikel für 18 €</td>
     <td>Vom 13 Dez. 2021 bis 26 Dez. 2021</td>
     <td><a href="A62SR996390WM.html" target="_blank">LINK</a></td>
+    <td><a href="https://www.amazon.de/gp/promotion/A62SR996390WM" target="_blank">LINK</a></td>
   </tr>
   <tr>
     <td>10 Blu-rays für 50 €</td>
     <td>Vom 06 Dez. 2021 bis 21 Dez. 2021</td>
     <td><a href="A29SNS6M5TTO0J.html" target="_blank">LINK</a></td>
+    <td><a href="https://www.amazon.de/gp/promotion/A29SNS6M5TTO0J" target="_blank">LINK</a></td>
   </tr>
 </table>
 
