--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <tr>
     <th>Promotion</th>
     <th>Period</th>
-    <th>Link</th>
+    <th>Viewer</th>
     <th>Amazon Deal Site</th>
   </tr>
   <tr>
