--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
-  <title>Amazon Promotion Viewer</title>
+  <title>Amazon Blu-ray Promotion Viewer</title>
   <style>
       body {
           font-family: Arial, Helvetica, sans-serif;
