--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </style>
 </head>
 <body>
-<h3>Amazon Promotion Viewer</h3>
+<h3>Amazon Blu-ray Promotion Viewer</h3>
 <table id="articles">
   <tr>
     <th>Promotion</th>
