everything auto generated

--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
           background-color: #04AA6D;
           color: white;
       }
+      #changelog td, #changelog th {
+          border: 1px solid #ddd;
+          padding: 8px;
+          background-color: #f2f2f2;
+          font-size: medium;
+      }
   </style>
 </head>
 <body>
@@ -44,20 +50,33 @@
     <th>Viewer</th>
     <th>Amazon Deal Site</th>
   </tr>
-  <tr>
-    <td>3 Artikel für 18 €</td>
-    <td>Vom 13 Dez. 2021 bis 26 Dez. 2021</td>
-    <td><a href="A62SR996390WM.html" target="_blank">LINK</a></td>
-    <td><a href="https://www.amazon.de/gp/promotion/A62SR996390WM" target="_blank">LINK</a></td>
-  </tr>
+
   <tr>
     <td>10 Blu-rays für 50 €</td>
     <td>Vom 06 Dez. 2021 bis 21 Dez. 2021</td>
     <td><a href="A29SNS6M5TTO0J.html" target="_blank">LINK</a></td>
     <td><a href="https://www.amazon.de/gp/promotion/A29SNS6M5TTO0J" target="_blank">LINK</a></td>
   </tr>
+<tr>
+    <td>3 Artikel für 18 €</td>
+    <td>Vom 13 Dez. 2021 bis 26 Dez. 2021</td>
+    <td><a href="A62SR996390WM.html" target="_blank">LINK</a></td>
+    <td><a href="https://www.amazon.de/gp/promotion/A62SR996390WM" target="_blank">LINK</a></td>
+  </tr>
+
 </table>
 
-
 </body>
+<br/>
+<h5>Changelog</h5>
+<table id="changelog">
+  <tr>
+    <th>Date</th>
+    <th>Change</th>
+  </tr>
+  <tr>
+    <td>2021-12-17</td>
+    <td>sortable columns, filtering duplicate articles</td>
+  </tr>
+</table>
 </html>
