--- a/A29SNS6M5TTO0J.html
+++ b/A29SNS6M5TTO0J.html
@@ -2,7 +2,7 @@
     <html lang="en">
     <head>
       <meta charset="utf-8"/>
-      <title>Title of the document</title>
+      <title>10 Blu-rays für 50 € - A29SNS6M5TTO0J</title>
       <style>
       body {
           font-family: Arial, Helvetica, sans-serif;
@@ -189,7 +189,7 @@
       <td><a href="https://www.amazon.de//dp/B005EJIIYC?m=A3JWKAKR8XB7XF" target="_blank">Wasabi - Ein Bulle in Japan [Blu-ray]</a></td>
       <td><a href="https://m.media-amazon.com/images/I/51T-+6hv48L.jpg" target="_blank"><img src="https://m.media-amazon.com/images/I/51T-+6hv48L.jpg" alt="todo" class="thumbnail"></a></td>
       <td><a href="https://www.amazon.de//dp/B005EJIIYC?m=A3JWKAKR8XB7XF" target="_blank">LINK</a></td>
-      <td>8,56 €</td>
+      <td>8,60 €</td>
       <td>4.8</td>
 </tr>
 <tr>
@@ -714,7 +714,7 @@
       <td><a href="https://www.amazon.de//dp/B000S1ROOQ?m=A3JWKAKR8XB7XF" target="_blank">12 Monkeys [Blu-ray]</a></td>
       <td><a href="https://m.media-amazon.com/images/I/51eb2t4ITJL.jpg" target="_blank"><img src="https://m.media-amazon.com/images/I/51eb2t4ITJL.jpg" alt="todo" class="thumbnail"></a></td>
       <td><a href="https://www.amazon.de//dp/B000S1ROOQ?m=A3JWKAKR8XB7XF" target="_blank">LINK</a></td>
-      <td>8,99 €</td>
+      <td>8,70 €</td>
       <td>4.5</td>
 </tr>
 <tr>
@@ -1015,7 +1015,7 @@
       <td><a href="https://www.amazon.de//dp/B01LGQLBTU?m=A3JWKAKR8XB7XF" target="_blank">Snowden [Blu-ray]</a></td>
       <td><a href="https://m.media-amazon.com/images/I/51DzfEJFTgL.jpg" target="_blank"><img src="https://m.media-amazon.com/images/I/51DzfEJFTgL.jpg" alt="todo" class="thumbnail"></a></td>
       <td><a href="https://www.amazon.de//dp/B01LGQLBTU?m=A3JWKAKR8XB7XF" target="_blank">LINK</a></td>
-      <td>8,55 €</td>
+      <td>8,11 €</td>
       <td>4.6</td>
 </tr>
 <tr>
@@ -1148,7 +1148,7 @@
       <td><a href="https://www.amazon.de//dp/B009X47PA2?m=A3JWKAKR8XB7XF" target="_blank">Zwei Missionare [Blu-ray]</a></td>
       <td><a href="https://m.media-amazon.com/images/I/51GDoA-xp5L.jpg" target="_blank"><img src="https://m.media-amazon.com/images/I/51GDoA-xp5L.jpg" alt="todo" class="thumbnail"></a></td>
       <td><a href="https://www.amazon.de//dp/B009X47PA2?m=A3JWKAKR8XB7XF" target="_blank">LINK</a></td>
-      <td>7,00 €</td>
+      <td>6,97 €</td>
       <td>4.7</td>
 </tr>
 <tr>
@@ -1596,7 +1596,7 @@
       <td><a href="https://www.amazon.de//dp/B001B0AY7M?m=A3JWKAKR8XB7XF" target="_blank">Tödliche Versprechen - Eastern Promises [Blu-ray]</a></td>
       <td><a href="https://m.media-amazon.com/images/I/51OOlx5HZeL.jpg" target="_blank"><img src="https://m.media-amazon.com/images/I/51OOlx5HZeL.jpg" alt="todo" class="thumbnail"></a></td>
       <td><a href="https://www.amazon.de//dp/B001B0AY7M?m=A3JWKAKR8XB7XF" target="_blank">LINK</a></td>
-      <td>9,15 €</td>
+      <td>9,77 €</td>
       <td>4.4</td>
 </tr>
 <tr>
@@ -1799,7 +1799,7 @@
       <td><a href="https://www.amazon.de//dp/B00YOF68Z8?m=A3JWKAKR8XB7XF" target="_blank">Men & Chicken</a></td>
       <td><a href="https://m.media-amazon.com/images/I/618Bcn7aHDL.jpg" target="_blank"><img src="https://m.media-amazon.com/images/I/618Bcn7aHDL.jpg" alt="todo" class="thumbnail"></a></td>
       <td><a href="https://www.amazon.de//dp/B00YOF68Z8?m=A3JWKAKR8XB7XF" target="_blank">LINK</a></td>
-      <td>8,47 €</td>
+      <td>8,80 €</td>
       <td>4.4</td>
 </tr>
 <tr>
@@ -2548,7 +2548,7 @@
       <td><a href="https://www.amazon.de//dp/B01N9VUM7T?m=A3JWKAKR8XB7XF" target="_blank">Jackie - Die First Lady [Blu-ray]</a></td>
       <td><a href="https://m.media-amazon.com/images/I/51DfFLtpQqL.jpg" target="_blank"><img src="https://m.media-amazon.com/images/I/51DfFLtpQqL.jpg" alt="todo" class="thumbnail"></a></td>
       <td><a href="https://www.amazon.de//dp/B01N9VUM7T?m=A3JWKAKR8XB7XF" target="_blank">LINK</a></td>
-      <td>8,55 €</td>
+      <td>8,11 €</td>
       <td>3.9</td>
 </tr>
 <tr>
@@ -3157,7 +3157,7 @@
       <td><a href="https://www.amazon.de//dp/B071HVZKQ4?m=A3JWKAKR8XB7XF" target="_blank">Innen Leben [Blu-ray]</a></td>
       <td><a href="https://m.media-amazon.com/images/I/51V46eQGVoL.jpg" target="_blank"><img src="https://m.media-amazon.com/images/I/51V46eQGVoL.jpg" alt="todo" class="thumbnail"></a></td>
       <td><a href="https://www.amazon.de//dp/B071HVZKQ4?m=A3JWKAKR8XB7XF" target="_blank">LINK</a></td>
-      <td>8,53 €</td>
+      <td>8,09 €</td>
       <td>3.5</td>
 </tr>
 <tr>
@@ -4347,7 +4347,7 @@
       <td><a href="https://www.amazon.de//dp/B07798BN4X?m=A3JWKAKR8XB7XF" target="_blank">The Big Sick [Blu-ray]</a></td>
       <td><a href="https://m.media-amazon.com/images/I/51VKEwTdd8L.jpg" target="_blank"><img src="https://m.media-amazon.com/images/I/51VKEwTdd8L.jpg" alt="todo" class="thumbnail"></a></td>
       <td><a href="https://www.amazon.de//dp/B07798BN4X?m=A3JWKAKR8XB7XF" target="_blank">LINK</a></td>
-      <td>11,99 €</td>
+      <td>11,56 €</td>
       <td>4.3</td>
 </tr>
 <tr>
