--- a/A62SR996390WM.html
+++ b/A62SR996390WM.html
@@ -2,7 +2,7 @@
     <html lang="en">
     <head>
       <meta charset="utf-8"/>
-      <title>Title of the document</title>
+      <title>3 Artikel für 18 € - A62SR996390WM</title>
       <style>
       body {
           font-family: Arial, Helvetica, sans-serif;
@@ -595,7 +595,7 @@
       <td><a href="https://www.amazon.de//dp/B071J9PZLG?m=A3JWKAKR8XB7XF" target="_blank">Terror am Rio Grande - Original Kinofassung (digital remastered)</a></td>
       <td><a href="https://m.media-amazon.com/images/I/51y0JR0xxbL.jpg" target="_blank"><img src="https://m.media-amazon.com/images/I/51y0JR0xxbL.jpg" alt="todo" class="thumbnail"></a></td>
       <td><a href="https://www.amazon.de//dp/B071J9PZLG?m=A3JWKAKR8XB7XF" target="_blank">LINK</a></td>
-      <td>6,90 €</td>
+      <td>6,82 €</td>
       <td>4.5</td>
 </tr>
 <tr>
@@ -987,7 +987,7 @@
       <td><a href="https://www.amazon.de//dp/B08DSYQ2N6?m=A3JWKAKR8XB7XF" target="_blank">Vier Himmlische Freunde</a></td>
       <td><a href="https://m.media-amazon.com/images/I/41+ftF+xDhL.jpg" target="_blank"><img src="https://m.media-amazon.com/images/I/41+ftF+xDhL.jpg" alt="todo" class="thumbnail"></a></td>
       <td><a href="https://www.amazon.de//dp/B08DSYQ2N6?m=A3JWKAKR8XB7XF" target="_blank">LINK</a></td>
-      <td>8,05 €</td>
+      <td>8,49 €</td>
       <td>4.7</td>
 </tr>
 <tr>
@@ -1393,7 +1393,7 @@
       <td><a href="https://www.amazon.de//dp/B072M3YZV9?m=A3JWKAKR8XB7XF" target="_blank">Konterbande - Original Kinofassung (digital remastered)</a></td>
       <td><a href="https://m.media-amazon.com/images/I/61mKLz6db2L.jpg" target="_blank"><img src="https://m.media-amazon.com/images/I/61mKLz6db2L.jpg" alt="todo" class="thumbnail"></a></td>
       <td><a href="https://www.amazon.de//dp/B072M3YZV9?m=A3JWKAKR8XB7XF" target="_blank">LINK</a></td>
-      <td>8,38 €</td>
+      <td>8,35 €</td>
       <td>4.5</td>
 </tr>
 <tr>
@@ -1463,7 +1463,7 @@
       <td><a href="https://www.amazon.de//dp/B01N53332N?m=A3JWKAKR8XB7XF" target="_blank">Am Marterpfahl der Sioux - Original Kinofassung</a></td>
       <td><a href="https://m.media-amazon.com/images/I/51JFDtZKjqL.jpg" target="_blank"><img src="https://m.media-amazon.com/images/I/51JFDtZKjqL.jpg" alt="todo" class="thumbnail"></a></td>
       <td><a href="https://www.amazon.de//dp/B01N53332N?m=A3JWKAKR8XB7XF" target="_blank">LINK</a></td>
-      <td>8,80 €</td>
+      <td>8,61 €</td>
       <td>3.7</td>
 </tr>
 <tr>
@@ -1904,7 +1904,7 @@
       <td><a href="https://www.amazon.de//dp/B01LWTAVDO?m=A3JWKAKR8XB7XF" target="_blank">Feuerwehrmann Sam – Auf dünnem Eis (9.Staffel Teil 2)</a></td>
       <td><a href="https://m.media-amazon.com/images/I/51vDBYPbzZL.jpg" target="_blank"><img src="https://m.media-amazon.com/images/I/51vDBYPbzZL.jpg" alt="todo" class="thumbnail"></a></td>
       <td><a href="https://www.amazon.de//dp/B01LWTAVDO?m=A3JWKAKR8XB7XF" target="_blank">LINK</a></td>
-      <td>8,95 €</td>
+      <td>8,76 €</td>
       <td>4.6</td>
 </tr>
 <tr>
@@ -1981,7 +1981,7 @@
       <td><a href="https://www.amazon.de//dp/B08KH3RYSY?m=A3JWKAKR8XB7XF" target="_blank">Feuerwehrmann Sam - Achtung Ausserirdische (Kinofilm) (+ CD Hörspiel) [2 DVDs]</a></td>
       <td><a href="https://m.media-amazon.com/images/I/51zHdbSiWvL.jpg" target="_blank"><img src="https://m.media-amazon.com/images/I/51zHdbSiWvL.jpg" alt="todo" class="thumbnail"></a></td>
       <td><a href="https://www.amazon.de//dp/B08KH3RYSY?m=A3JWKAKR8XB7XF" target="_blank">LINK</a></td>
-      <td>9,27 €</td>
+      <td>9,07 €</td>
       <td>5.0</td>
 </tr>
 <tr>
@@ -2219,7 +2219,7 @@
       <td><a href="https://www.amazon.de//dp/B013LCWWZY?m=A3JWKAKR8XB7XF" target="_blank">Feuerwehrmann Sam - Der tapfere Retter (8.Staffel Teil 3)</a></td>
       <td><a href="https://m.media-amazon.com/images/I/51JCqAeLS0L.jpg" target="_blank"><img src="https://m.media-amazon.com/images/I/51JCqAeLS0L.jpg" alt="todo" class="thumbnail"></a></td>
       <td><a href="https://www.amazon.de//dp/B013LCWWZY?m=A3JWKAKR8XB7XF" target="_blank">LINK</a></td>
-      <td>10,89 €</td>
+      <td>6,86 €</td>
       <td>4.7</td>
 </tr>
 <tr>
@@ -2261,7 +2261,7 @@
       <td><a href="https://www.amazon.de//dp/B08L3XCBKW?m=A3JWKAKR8XB7XF" target="_blank">Polly Pocket - Teil 2</a></td>
       <td><a href="https://m.media-amazon.com/images/I/51a4SoiOQVL.jpg" target="_blank"><img src="https://m.media-amazon.com/images/I/51a4SoiOQVL.jpg" alt="todo" class="thumbnail"></a></td>
       <td><a href="https://www.amazon.de//dp/B08L3XCBKW?m=A3JWKAKR8XB7XF" target="_blank">LINK</a></td>
-      <td>9,69 €</td>
+      <td>8,01 €</td>
       <td>5.0</td>
 </tr>
 <tr>
@@ -2380,7 +2380,7 @@
       <td><a href="https://www.amazon.de//dp/B01IQOV118?m=A3JWKAKR8XB7XF" target="_blank">Feuerwehrmann Sam - Mann über Bord (9.Staffel Teil 1)</a></td>
       <td><a href="https://m.media-amazon.com/images/I/51nDfOhRL0L.jpg" target="_blank"><img src="https://m.media-amazon.com/images/I/51nDfOhRL0L.jpg" alt="todo" class="thumbnail"></a></td>
       <td><a href="https://www.amazon.de//dp/B01IQOV118?m=A3JWKAKR8XB7XF" target="_blank">LINK</a></td>
-      <td>9,49 €</td>
+      <td>7,82 €</td>
       <td>4.6</td>
 </tr>
 <tr>
@@ -2534,7 +2534,7 @@
       <td><a href="https://www.amazon.de//dp/B0725B5XCC?m=A3JWKAKR8XB7XF" target="_blank">Beat Beat Heart - Kinofassung</a></td>
       <td><a href="https://m.media-amazon.com/images/I/51cRRvtLCrL.jpg" target="_blank"><img src="https://m.media-amazon.com/images/I/51cRRvtLCrL.jpg" alt="todo" class="thumbnail"></a></td>
       <td><a href="https://www.amazon.de//dp/B0725B5XCC?m=A3JWKAKR8XB7XF" target="_blank">LINK</a></td>
-      <td>9,74 €</td>
+      <td>9,69 €</td>
       <td>2.9</td>
 </tr>
 <tr>
@@ -2646,7 +2646,7 @@
       <td><a href="https://www.amazon.de//dp/B0766F4WL2?m=A3JWKAKR8XB7XF" target="_blank">Mann im Spagat - Pace, Cowboy, Pace (Kinofassung)</a></td>
       <td><a href="https://m.media-amazon.com/images/I/510-ws5uNKL.jpg" target="_blank"><img src="https://m.media-amazon.com/images/I/510-ws5uNKL.jpg" alt="todo" class="thumbnail"></a></td>
       <td><a href="https://www.amazon.de//dp/B0766F4WL2?m=A3JWKAKR8XB7XF" target="_blank">LINK</a></td>
-      <td>10,59 €</td>
+      <td>10,15 €</td>
       <td>4.1</td>
 </tr>
 <tr>
@@ -2723,7 +2723,7 @@
       <td><a href="https://www.amazon.de//dp/B07D4ZSW9D?m=A3JWKAKR8XB7XF" target="_blank">Avengers Grimm 2 - Time Wars (Uncut)</a></td>
       <td><a href="https://m.media-amazon.com/images/I/51xQP-O0zaL.jpg" target="_blank"><img src="https://m.media-amazon.com/images/I/51xQP-O0zaL.jpg" alt="todo" class="thumbnail"></a></td>
       <td><a href="https://www.amazon.de//dp/B07D4ZSW9D?m=A3JWKAKR8XB7XF" target="_blank">LINK</a></td>
-      <td>9,39 €</td>
+      <td>9,19 €</td>
       <td>3.1</td>
 </tr>
 <tr>
@@ -2863,7 +2863,7 @@
       <td><a href="https://www.amazon.de//dp/B0155XPF9W?m=A3JWKAKR8XB7XF" target="_blank">HomeSick (Berlinale-Kinofassung)</a></td>
       <td><a href="https://m.media-amazon.com/images/I/51LWxZLfc-L.jpg" target="_blank"><img src="https://m.media-amazon.com/images/I/51LWxZLfc-L.jpg" alt="todo" class="thumbnail"></a></td>
       <td><a href="https://www.amazon.de//dp/B0155XPF9W?m=A3JWKAKR8XB7XF" target="_blank">LINK</a></td>
-      <td>12,43 €</td>
+      <td>13,29 €</td>
       <td>3.3</td>
 </tr>
 <tr>
