--- a/index.html
+++ b/index.html
@@ -63,6 +63,18 @@
     <td><a href="A62SR996390WM.html" target="_blank">LINK</a></td>
     <td><a href="https://www.amazon.de/gp/promotion/A62SR996390WM" target="_blank">LINK</a></td>
   </tr>
+<tr>
+    <td>3 Artikel für 50 €</td>
+    <td>Vom 25 Dez. 2021 bis 09 Jan. 2022</td>
+    <td><a href="A1IMNMU1B1KG2X.html" target="_blank">LINK</a></td>
+    <td><a href="https://www.amazon.de/gp/promotion/A1IMNMU1B1KG2X" target="_blank">LINK</a></td>
+  </tr>
+<tr>
+    <td>6 Blu-rays für 40 €</td>
+    <td>Vom 25 Dez. 2021 bis 09 Jan. 2022</td>
+    <td><a href="A3MTWAKVA975I6.html" target="_blank">LINK</a></td>
+    <td><a href="https://www.amazon.de/gp/promotion/A3MTWAKVA975I6" target="_blank">LINK</a></td>
+  </tr>
 
 </table>
 
